# potatodf5eb6a9-0662-485e-9671-7df026e95e91

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: retrieve_potato_photo_service.py  server.py
